@startuml

title __LAB4's Class Diagram__\n


    namespace om.example.lab4 {
      class com.example.lab4.HelloApplication {
      }
    }

  


    namespace om.example.lab4 {
      class com.example.lab4.HelloController {
      }
    }

  


    namespace ackege {
      interface packege.Aggregate {
      }
  }
  


    namespace ackege {
      class packege.ImageCollection {
      }
    }

  


    namespace ackege {
      interface packege.Iterator {
      }
    }

  

  com.example.lab4.HelloApplication -up-|> javafx.application.Application
  com.example.lab4.HelloController .up.|> javafx.fxml.Initializable
  com.example.lab4.HelloController o-- packege.ImageCollection : imgs
  com.example.lab4.HelloController o-- packege.Iterator : iter_main
  packege.ImageCollection .up.|> packege.Aggregate


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
